/*
 * Copyright 2020 Accenture Global Solutions Limited
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = 'proto3';
package tracdap.metadata;

option java_package = "org.finos.tracdap.metadata";
option java_multiple_files = true;

import "tracdap/metadata/type.proto";
import "tracdap/metadata/object_id.proto";
import "tracdap/metadata/schema_proto.proto";




message DataDefinition {

    oneof schemaSpecifier {

        TagSelector schemaId = 1;
        SchemaDefinition schema = 2;
    }

    message Delta {

        uint32 deltaIndex = 1;
        string dataItem = 2;
    }

    message Snap {

        uint32 snapIndex = 1;
        repeated Delta deltas = 2;
    }

    message Part {

        PartKey partKey = 1;
        Snap snap = 2;
    }

    map<string, Part> parts = 3;

    TagSelector storageId = 4;
}
